# paralell

./: CMakeLists.txt  README.md  barrier.h  main.cpp  reduce_par.h  thread_num.h
